--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(currentUser: User, role: String, title: String)(content: Html)
 @import helper._
 @import helper.twitterBootstrap._
 
@@ -22,17 +22,17 @@
     </head>
     <body>
     	@if(flash.containsKey("success")){
-		<div class="alert alert-success">
+		<div class="alert alert-success alert-dismissible">
 		@flash.get("success")
 		</div>
 		}
 		@if(flash.containsKey("error")){
-		<div class="alert alert-danger">
+		<div class="alert alert-danger alert-dismissible">
 		@flash.get("error")
 		</div>
 		}
 		@if(flash.containsKey("warning")){
-		<div class="alert alert-warning">
+		<div class="alert alert-warning alert-dismissible">
 		@flash.get("warning")
 		</div>
 		}
@@ -58,48 +58,86 @@
 		      <ul class="nav navbar-nav">
 		      
 		      	<!-- Defining the main page link-->
-		      	<li><a href="/">Info</a></li>
+		      	<li><a href="/"><i class="glyphicon glyphicon-home"></i> Info</a></li>
 		      	
+		      	@if((session.get("role") == "SuperUser")){
 		      	<!-- Defining the dropdown list for avalible user functions -->
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Uzytkownicy <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-user"></i> Użytkownicy <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><a href="/users/new">Nowy użytkownik</a></li><!-- Adding new user -->
 		            <li class="divider"></li>
 		            <li><a href="/users">Lista użytkowników</a></li><!-- Displaying the users List -->
 		          </ul>
 		        </li>
+		        }
 		        
+		        @if((session.get("role") == "SuperUser") || (session.get("role") == "CourseManager")){
 		        <!-- Defining the dropdown list for avalible course functions -->
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Kursy <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-tree-conifer"></i> Kursy <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><a href="/courses/new">Nowy kurs</a></li><!-- Adding new course -->
 		            <li class="divider"></li>
 		            <li><a href="/courses">Lista kursów</a></li><!-- Displaying the courses List -->
 		          </ul>
 		        </li>
+		        }
+		        
+		        @if((session.get("role") == "SuperUser")){
+		        <!-- Defining the dropdown list for avalible warehouse functions -->
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-th"></i> Magazyn <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		            <li><a href="@routes.Equipments.newEquipment()">Dodaj sprzęt </a></li><!-- Adding new equipment to warehouse -->
+		            <li><a href="@routes.Equipments.borrowEquipment()">Wypożycz sprzęt </a></li><!-- Borrow equipment from warehouse -->
+		            <li><a href="@routes.Equipments.returnEquipment()">Oddaj sprzęt </a></li><!-- Return equipment to warehouse -->
+		            <li class="divider"></li>
+		            <li><a href="@routes.Equipments.getEquipmentsList()">Lista sprzętu</a></li><!-- Displaying the courses List -->
+		            <li class="divider"></li>
+		            <li><a href="@routes.Equipments.bookEquipment()">Zarezerwuj sprzęt </a></li><!-- Book equipment in warehouse -->
+		          </ul>
+		        </li>
+		      }
 		      
+		      @if((session.get("role") == "SuperUser")){
 		      <!-- Defining the dropdown list for avalible payment functions -->
 		        <li class="dropdown">
-		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Płatności <span class="caret"></span></a>
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="glyphicon glyphicon-usd"></i> Płatności <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
 		            <li><a href="/payments/new">Nowa płatność</a></li><!-- Adding new payment -->
 		            <li class="divider"></li>
 		            <li><a href="/payments">Lista płatności</a></li><!-- Displaying the payments List -->
 		          </ul>
 		        </li>
+		      }
+		      
 		      </ul>
 		      
 		      
-		      <!-- Defining the nav-bars roght side components -->
-		      <ul class="nav navbar-nav navbar-right">
 		      
-		      	<!-- Defining the fink for signing in -->
-		        <li><a href="/users/singin"><button>Logowanie</button></a></li><!-- User authentication -->
+		      <!-- Defining the nav-bars right side components -->
+		      <ul class="nav navbar-nav navbar-right">
 		        
+		        @if(session.containsKey("userName")){
+		        	<li><a href="/account"><i class="glyphicon glyphicon-user"></i> Moje konto</a></li><!-- User account details -->
+		        }
+		        
+		        <!-- Defining the link for logout -->
+		        @if(session.containsKey("userName")){
+		        	<li><a href="/logout"><i class="glyphicon glyphicon-log-out"></i> Wyloguj <b>@if(currentUser != null){@currentUser.firstName @currentUser.lastName}</b></a></li><!-- User deauthentication -->
+		        }
+		      	
+		      
+		      	<!-- Defining the link for login in -->
+		      	@if(!session.containsKey("userName")){
+		      	<li><a href="/login"><i class="glyphicon glyphicon-log-in"></i> Zaloguj</a></li><!-- User authentication -->
+		        }
+		        
+		        @if((session.get("role") == "SuperUser")){
 		        <!-- Defining the link for access the system settings -->
-		        <li><a href="/settings"><i class="glyphicon glyphicon-wrench"></i></a></li><!-- Displaying the settings panel -->
+		        <li><a href="/settings"><i class="glyphicon glyphicon-cog"></i></a></li><!-- Displaying the settings panel -->
+		      	}
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
 		  </div><!-- /.container-fluid -->
