--- a/app/views/courses/coursesList.scala.html
+++ b/app/views/courses/coursesList.scala.html
@@ -1,8 +1,8 @@
-@(courses: List[Course])
+@(currentUser: User, role: String, courses: List[Course])
 @import helper._
 @import helper.twitterBootstrap._
 
-@main("Lista kursów"){
+@main(currentUser, role, "Lista kursów"){
 <meta charset="UTF-8">
 
 	
@@ -14,7 +14,7 @@
 			<thead>
 				<tr>
 				<th>Nazwa kursu</th>
-				<th>Typ kursu</th>
+
 				<th>Liczka kursantów</th>
 				<th>Zmień/Usuń</th>
 				</tr>
@@ -22,8 +22,8 @@
 			<tbody>
 				@for(course <- courses) {
 				<tr>
-					<td><a href="@routes.Courses.editCourse(course._id)">@course.name</a></td>
-					<td>@course.courseType</td>
+					<td><a href="@routes.Courses.editCourse(course._id)"><b>@course.name</b></a></td>
+
 					<td>@course.members_ids.size</td>
 				
 					<td>
