--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,5 @@
-@main("Witamy w AKGtool !") {
+@(currentUser: User, role: String)
+@main(currentUser, role, "Witamy w AKGtool !") {
 	<meta charset="UTF-8">
 	<div>
 		<br>
@@ -6,7 +7,8 @@
 	    <p align="center">System zarządzania akademickimi klubami sportowymi. Aby uzyskać informacje o funkcjach systemu - prosimy o zapoznanie się z jego dokumentacją.</p>
 	    <br>
 	    <p align="center"><img ismap src="@routes.Assets.at("images/akgLogo.jpg")" align="center"></p>
-	   
+	   	<br>
+	   	
 	</div>
     <div>
     
